# wgsl-playground

./: Cargo.toml  README.md
examples/: circle.wgsl  overlapping_circles.wgsl  uniforms.wgsl
src/: main.rs
